# rust-zero-to-production

./: .env  Cargo.toml  Dockerfile
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
