[package]
name = "rust-zero-to-production"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_zero_to_production"


[dev-dependencies]
reqwest = "0.12.15"
